spmi: trace: fix stack-out-of-bound access in SPMI tracing functions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56618,6 +56618,7 @@
 	patches.suse/iio-resolver-ad2s90-Fix-alignment-for-DMA-safety.patch
 	patches.suse/soundwire-bus_type-fix-remove-and-shutdown-support.patch
 	patches.suse/iio-light-isl29028-Fix-the-warning-in-isl29028_remov.patch
+	patches.suse/spmi-trace-fix-stack-out-of-bound-access-in-SPMI-tracing-functions.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/usb-host-Fix-refcount-leak-in-ehci_hcd_ppc_of_probe.patch
 	patches.suse/usb-ohci-nxp-Fix-refcount-leak-in-ohci_hcd_nxp_probe.patch
