--- a/series.conf
+++ b/series.conf
@@ -56778,6 +56778,7 @@
 	patches.suse/ALSA-hda-cirrus-support-for-iMac-12-1-model.patch
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
+	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
