ceph: don't leak snap_rwsem in handle_cap_grant (bsc#1202823).

--- a/series.conf
+++ b/series.conf
@@ -13827,6 +13827,7 @@
 	patches.suse/pinctrl-qcom-sm8250-Fix-PDC-map.patch
 	patches.suse/Input-exc3000-fix-return-value-check-of-wait_for_com.patch
 	patches.suse/ceph-use-correct-index-when-encoding-client-supported-features.patch
+	patches.suse/ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
 	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
 	patches.suse/net-phy-Warn-about-incorrect-mdio_bus_phy_resume-sta.patch
 	patches.suse/virtio_net-fix-memory-leak-inside-XPD_TX-with-mergea.patch
