vmxnet3: switch from 'pci_' to 'dma_' API (bsc#1200431).

--- a/series.conf
+++ b/series.conf
@@ -52696,6 +52696,7 @@
 	patches.suse/rtw88-use-read_poll_timeout-instead-of-fixed-sleep.patch
 	patches.suse/rtw88-wow-build-wow-function-only-if-CONFIG_PM-is-on.patch
 	patches.suse/rtw88-wow-fix-size-access-error-of-probe-request.patch
+	patches.suse/vmxnet3-switch-from-pci_-to-dma_-API.patch
 	patches.suse/xen-netfront-read-response-from-backend-only-once.patch
 	patches.suse/xen-netfront-don-t-read-data-from-request-on-the-rin.patch
 	patches.suse/xen-netfront-disentangle-tx_skb_freelist.patch
