--- a/series.conf
+++ b/series.conf
@@ -55835,6 +55835,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-TongFang-devices-with.patch
 	patches.suse/ALSA-usb-audio-Restore-Rane-SL-1-quirk.patch
 	patches.suse/Fix-double-fget-in-vhost_net_set_backend.patch
+	patches.suse/net-vmxnet3-fix-possible-use-after-free-bugs-in-vmxn.patch
 	patches.suse/NFC-nci-fix-sleep-in-atomic-context-bugs-caused-by-n.patch
 	patches.suse/pinctrl-sunxi-fix-f1c100s-uart2-function.patch
 	patches.suse/arm64-paravirt-Use-RCU-read-locks-to-guard-stolen_ti.patch
