vmxnet3: Remove useless DMA-32 fallback configuration (bsc#1200431).

--- a/series.conf
+++ b/series.conf
@@ -54434,6 +54434,7 @@
 	patches.suse/net-phy-marvell-configure-RGMII-delays-for-88E1118.patch
 	patches.suse/Bluetooth-hci_bcm-Check-for-error-irq.patch
 	patches.suse/iwlwifi-mvm-Use-div_s64-instead-of-do_div-in-iwl_mvm.patch
+	patches.suse/vmxnet3-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/can-gs_usb-fix-use-of-uninitialized-variable-detach-.patch
 	patches.suse/net-smc-Reset-conn-lgr-when-link-group-registration-fails
 	patches.suse/netfilter-nft_set_pipapo-allocate-pcpu-scratch-maps-.patch
