--- a/series.conf
+++ b/series.conf
@@ -56513,6 +56513,7 @@
 	patches.suse/usbnet-smsc95xx-Fix-deadlock-on-runtime-resume.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 	patches.suse/wifi-iwlegacy-4965-fix-potential-off-by-one-overflow.patch
+	patches.suse/vmxnet3-Record-queue-number-to-incoming-packets.patch
 	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
 	patches.suse/can-rcar_can-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-sja1000-do-not-report-txerr-and-rxerr-during-bus.patch
