--- a/series.conf
+++ b/series.conf
@@ -56500,6 +56500,7 @@
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
 	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
 	patches.suse/vmxnet3-prepare-for-version-7-changes.patch
+	patches.suse/vmxnet3-add-support-for-capability-registers.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/usbnet-smsc95xx-Fix-deadlock-on-runtime-resume.patch
