--- a/series.conf
+++ b/series.conf
@@ -56508,6 +56508,7 @@
 	patches.suse/vmxnet3-use-ext1-field-to-indicate-encapsulated-pack.patch
 	patches.suse/vmxnet3-update-to-version-7.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
+	patches.suse/vmxnet3-disable-overlay-offloads-if-UPT-device-does-.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/usbnet-smsc95xx-Fix-deadlock-on-runtime-resume.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
