net: vmxnet3: remove multiple false checks in vmxnet3_ethtool.c (bsc#1200431).

--- a/series.conf
+++ b/series.conf
@@ -53612,6 +53612,7 @@
 	patches.suse/msft-hv-2473-net-mana-Fix-the-netdev_err-s-vPort-argument-in-mana.patch
 	patches.suse/msft-hv-2475-net-mana-Improve-the-HWC-error-handling.patch
 	patches.suse/msft-hv-2476-net-mana-Support-hibernation-and-kexec.patch
+	patches.suse/net-vmxnet3-remove-multiple-false-checks-in-vmxnet3_.patch
 	patches.suse/bpf-Disallow-unprivileged-bpf-by-default.patch
 	patches.suse/ibmvnic-don-t-stop-queue-in-xmit.patch
 	patches.suse/ibmvnic-Process-crqs-after-enabling-interrupts.patch
