--- a/series.conf
+++ b/series.conf
@@ -56503,6 +56503,7 @@
 	patches.suse/vmxnet3-add-support-for-capability-registers.patch
 	patches.suse/vmxnet3-add-support-for-large-passthrough-BAR-regist.patch
 	patches.suse/vmxnet3-add-support-for-out-of-order-rx-completion.patch
+	patches.suse/vmxnet3-add-command-to-set-ring-buffer-sizes.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/usbnet-smsc95xx-Fix-deadlock-on-runtime-resume.patch
