--- a/series.conf
+++ b/series.conf
@@ -56501,6 +56501,7 @@
 	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
 	patches.suse/vmxnet3-prepare-for-version-7-changes.patch
 	patches.suse/vmxnet3-add-support-for-capability-registers.patch
+	patches.suse/vmxnet3-add-support-for-large-passthrough-BAR-regist.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/usbnet-smsc95xx-Fix-deadlock-on-runtime-resume.patch
