vmxnet3: add support for out of order rx completion (bsc#1200431).

--- a/series.conf
+++ b/series.conf
@@ -56502,6 +56502,7 @@
 	patches.suse/vmxnet3-prepare-for-version-7-changes.patch
 	patches.suse/vmxnet3-add-support-for-capability-registers.patch
 	patches.suse/vmxnet3-add-support-for-large-passthrough-BAR-regist.patch
+	patches.suse/vmxnet3-add-support-for-out-of-order-rx-completion.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/usbnet-smsc95xx-Fix-deadlock-on-runtime-resume.patch
