--- a/series.conf
+++ b/series.conf
@@ -56531,6 +56531,7 @@
 	patches.suse/wifi-p54-Fix-an-error-handling-path-in-p54spi_probe.patch
 	patches.suse/wifi-p54-add-missing-parentheses-in-p54_flush.patch
 	patches.suse/wifi-wil6210-debugfs-fix-info-leak-in-wil_write_file.patch
+	patches.suse/vmxnet3-do-not-reschedule-napi-for-rx-processing.patch
 	patches.suse/wifi-iwlwifi-mvm-fix-double-list_add-at-iwl_mvm_mac_.patch
 	patches.suse/wifi-libertas-Fix-possible-refcount-leak-in-if_usb_p.patch
 	patches.suse/wifi-wil6210-debugfs-fix-uninitialized-variable-use-.patch
