--- a/series.conf
+++ b/series.conf
@@ -53432,6 +53432,7 @@
 	patches.suse/cfg80211-correct-bridge-4addr-mode-check.patch
 	patches.suse/usbnet-fix-error-return-code-in-usbnet_probe.patch
 	patches.suse/r8169-Add-device-10ec-8162-to-driver-r8169.patch
+	patches.suse/vmxnet3-do-not-stop-tx-queues-after-netif_device_det.patch
 	patches.suse/drm-panel-orientation-quirks-Add-quirk-for-Aya-Neo-2.patch
 	patches.suse/drm-panel-orientation-quirks-Add-quirk-for-GPD-Win3.patch
 	patches.suse/mmc-sdhci-Map-more-voltage-level-to-SDHCI_POWER_330.patch
