--- a/series.conf
+++ b/series.conf
@@ -56506,6 +56506,7 @@
 	patches.suse/vmxnet3-add-command-to-set-ring-buffer-sizes.patch
 	patches.suse/vmxnet3-limit-number-of-TXDs-used-for-TSO-packet.patch
 	patches.suse/vmxnet3-use-ext1-field-to-indicate-encapsulated-pack.patch
+	patches.suse/vmxnet3-update-to-version-7.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/usbnet-smsc95xx-Fix-deadlock-on-runtime-resume.patch
