--- a/series.conf
+++ b/series.conf
@@ -10906,6 +10906,7 @@
 	patches.suse/scsi-ufs-core-scsi_get_lba-error-fix.patch
 	patches.suse/scsi-lpfc-Remove-failing-soft_wwn-support.patch
 	patches.suse/scsi-iscsi-Add-helper-functions-to-manage-iscsi_cls_conn.patch
+	patches.suse/scsi-libiscsi-Add-iscsi_cls_conn-to-sysfs-after-initialization.patch
 	patches.suse/scsi-libiscsi-Teardown-iscsi_cls_conn-gracefully.patch
 	patches.suse/scsi-qla2xxx-Fix-incorrect-reporting-of-task-managem.patch
 	patches.suse/scsi-qla2xxx-Fix-loss-of-NVMe-namespaces-after-drive.patch
