can: j1939: j1939_session_destroy(): fix memory leak of skbs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1285,6 +1285,7 @@
 	patches.kernel.org/5.19.4-067-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
 	patches.kernel.org/5.19.4-068-bpf-Check-the-validity-of-max_rdwr_access-for-.patch
 	patches.kernel.org/5.19.4-069-can-mcp251x-Fix-race-condition-on-receive-inte.patch
+	patches.kernel.org/5.19.4-070-can-j1939-j1939_session_destroy-fix-memory-lea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
