--- a/series.conf
+++ b/series.conf
@@ -1578,6 +1578,7 @@
 	patches.kernel.org/5.19.4-360-f2fs-fix-null-ptr-deref-in-f2fs_get_dnode_of_d.patch
 	patches.kernel.org/5.19.4-361-scsi-ufs-ufs-mediatek-Fix-build-error-and-type.patch
 	patches.kernel.org/5.19.4-362-Revert-ALSA-hda-Fix-page-fault-in-snd_hda_code.patch
+	patches.kernel.org/5.19.4-363-Linux-5.19.4.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
