KVM: arm64: Treat PMCR_EL1.LC as RES1 on asymmetric systems (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1463,6 +1463,7 @@
 	patches.kernel.org/5.19.4-245-drm-bridge-lvds-codec-Fix-error-checking-of-dr.patch
 	patches.kernel.org/5.19.4-246-drm-sun4i-dsi-Prevent-underflow-when-computing.patch
 	patches.kernel.org/5.19.4-247-drm-amdgpu-Fix-use-after-free-on-amdgpu_bo_lis.patch
+	patches.kernel.org/5.19.4-248-KVM-arm64-Treat-PMCR_EL1.LC-as-RES1-on-asymmet.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
