dmaengine: sprd: Cleanup in .remove() after pm_runtime_get_sync() failed (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1521,6 +1521,7 @@
 	patches.kernel.org/5.19.4-303-csky-kprobe-reclaim-insn_slot-on-kprobe-unregi.patch
 	patches.kernel.org/5.19.4-304-selftests-kprobe-Do-not-test-for-GRP-without-e.patch
 	patches.kernel.org/5.19.4-305-dmaengine-tegra-Add-terminate-for-Tegra234.patch
+	patches.kernel.org/5.19.4-306-dmaengine-sprd-Cleanup-in-.remove-after-pm_run.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
