--- a/series.conf
+++ b/series.conf
@@ -1499,6 +1499,7 @@
 	patches.kernel.org/5.19.4-281-zram-do-not-lookup-algorithm-in-backends-table.patch
 	patches.kernel.org/5.19.4-282-clk-qcom-clk-alpha-pll-fix-clk_trion_pll_confi.patch
 	patches.kernel.org/5.19.4-283-scsi-lpfc-Prevent-buffer-overflow-crashes-in-d.patch
+	patches.kernel.org/5.19.4-284-scsi-lpfc-Fix-possible-memory-leak-when-failin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
