spi: meson-spicc: add local pow2 clock ops to preserve rate between messages (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1418,6 +1418,7 @@
 	patches.kernel.org/5.19.4-200-netfilter-nf_tables-disallow-NFT_SET_ELEM_CATC.patch
 	patches.kernel.org/5.19.4-201-netfilter-nf_tables-check-NFT_SET_CONCAT-flag-.patch
 	patches.kernel.org/5.19.4-202-powerpc-pci-Fix-get_phb_number-locking.patch
+	patches.kernel.org/5.19.4-203-spi-meson-spicc-add-local-pow2-clock-ops-to-pr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
