--- a/series.conf
+++ b/series.conf
@@ -1490,6 +1490,7 @@
 	patches.kernel.org/5.19.4-272-scsi-ufs-ufs-mediatek-Fix-the-timing-of-config.patch
 	patches.kernel.org/5.19.4-273-usb-typec-mux-Add-CONFIG-guards-for-functions.patch
 	patches.kernel.org/5.19.4-274-usb-host-ohci-ppc-of-Fix-refcount-leak-bug.patch
+	patches.kernel.org/5.19.4-275-usb-renesas-Fix-refcount-leak-bug.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
