riscv: dts: canaan: Add k210 topology information (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1546,6 +1546,7 @@
 	patches.kernel.org/5.19.4-328-ASoC-SOF-sof-client-probes-Only-load-the-drive.patch
 	patches.kernel.org/5.19.4-329-ASoC-rsnd-care-default-case-on-rsnd_ssiu_busif.patch
 	patches.kernel.org/5.19.4-330-riscv-dts-sifive-Add-fu740-topology-informatio.patch
+	patches.kernel.org/5.19.4-331-riscv-dts-canaan-Add-k210-topology-information.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
