scsi: ufs: ufs-mediatek: Fix build error and type mismatch (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1576,6 +1576,7 @@
 	patches.kernel.org/5.19.4-358-MIPS-tlbex-Explicitly-compare-_PAGE_NO_EXEC-ag.patch
 	patches.kernel.org/5.19.4-359-f2fs-revive-F2FS_IOC_ABORT_VOLATILE_WRITE.patch
 	patches.kernel.org/5.19.4-360-f2fs-fix-null-ptr-deref-in-f2fs_get_dnode_of_d.patch
+	patches.kernel.org/5.19.4-361-scsi-ufs-ufs-mediatek-Fix-build-error-and-type.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
