--- a/series.conf
+++ b/series.conf
@@ -1342,6 +1342,7 @@
 	patches.kernel.org/5.19.4-124-vsock-Fix-memory-leak-in-vsock_connect.patch
 	patches.kernel.org/5.19.4-125-vsock-Set-socket-state-back-to-SS_UNCONNECTED-.patch
 	patches.kernel.org/5.19.4-126-dt-bindings-gpio-zynq-Add-missing-compatible-s.patch
+	patches.kernel.org/5.19.4-127-dt-bindings-arm-qcom-fix-Longcheer-L8150-compa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
