x86/mm: Use proper mask when setting PUD mapping (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1220,6 +1220,7 @@
 	patches.kernel.org/5.19.4-002-ALSA-hda-realtek-Add-quirk-for-Clevo-NS50PU-NS.patch
 	patches.kernel.org/5.19.4-003-RDMA-Handle-the-return-code-from-dma_resv_wait.patch
 	patches.kernel.org/5.19.4-004-KVM-Unconditionally-get-a-ref-to-dev-kvm-modul.patch
+	patches.kernel.org/5.19.4-005-x86-mm-Use-proper-mask-when-setting-PUD-mappin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
