--- a/series.conf
+++ b/series.conf
@@ -1460,6 +1460,7 @@
 	patches.kernel.org/5.19.4-242-drm-meson-Fix-refcount-bugs-in-meson_vpu_has_a.patch
 	patches.kernel.org/5.19.4-243-drm-i915-ttm-don-t-leak-the-ccs-state.patch
 	patches.kernel.org/5.19.4-244-drm-amdgpu-Avoid-another-list-of-reset-devices.patch
+	patches.kernel.org/5.19.4-245-drm-bridge-lvds-codec-Fix-error-checking-of-dr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
