drm/meson: Fix overflow implicit truncation warnings (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1485,6 +1485,7 @@
 	patches.kernel.org/5.19.4-267-scsi-ufs-core-Add-UFSHCD_QUIRK_BROKEN_64BIT_AD.patch
 	patches.kernel.org/5.19.4-268-scsi-ufs-core-Add-UFSHCD_QUIRK_HIBERN_FASTAUTO.patch
 	patches.kernel.org/5.19.4-269-irqchip-tegra-Fix-overflow-implicit-truncation.patch
+	patches.kernel.org/5.19.4-270-drm-meson-Fix-overflow-implicit-truncation-war.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
