NFSv4.1: Handle NFS4ERR_DELAY replies to OP_SEQUENCE correctly (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1268,6 +1268,7 @@
 	patches.kernel.org/5.19.4-050-netfilter-nf_tables-fix-crash-when-nf_trace-is.patch
 	patches.kernel.org/5.19.4-051-net-tap-NULL-pointer-derefence-in-dev_parse_he.patch
 	patches.kernel.org/5.19.4-052-NFSv4.1-Don-t-decrease-the-value-of-seq_nr_hig.patch
+	patches.kernel.org/5.19.4-053-NFSv4.1-Handle-NFS4ERR_DELAY-replies-to-OP_SEQ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
