cifs: Fix memory leak on the deferred close (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1243,6 +1243,7 @@
 	patches.kernel.org/5.19.4-025-drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
 	patches.kernel.org/5.19.4-026-drm-i915-gt-Batch-TLB-invalidations.patch
 	patches.kernel.org/5.19.4-027-drm-i915-pass-a-pointer-for-tlb-seqno-at-vma_i.patch
+	patches.kernel.org/5.19.4-028-cifs-Fix-memory-leak-on-the-deferred-close.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
