--- a/series.conf
+++ b/series.conf
@@ -1340,6 +1340,7 @@
 	patches.kernel.org/5.19.4-122-ipv6-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
 	patches.kernel.org/5.19.4-123-plip-avoid-rcu-debug-splat.patch
 	patches.kernel.org/5.19.4-124-vsock-Fix-memory-leak-in-vsock_connect.patch
+	patches.kernel.org/5.19.4-125-vsock-Set-socket-state-back-to-SS_UNCONNECTED-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
