apparmor: Fix memleak in aa_simple_write_to_buffer() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1263,6 +1263,7 @@
 	patches.kernel.org/5.19.4-045-apparmor-fix-setting-unconfined-mode-on-a-load.patch
 	patches.kernel.org/5.19.4-046-apparmor-fix-overlapping-attachment-computatio.patch
 	patches.kernel.org/5.19.4-047-apparmor-fix-reference-count-leak-in-aa_pivotr.patch
+	patches.kernel.org/5.19.4-048-apparmor-Fix-memleak-in-aa_simple_write_to_buf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
