--- a/series.conf
+++ b/series.conf
@@ -1279,6 +1279,7 @@
 	patches.kernel.org/5.19.4-061-BPF-Fix-potential-bad-pointer-dereference-in-b.patch
 	patches.kernel.org/5.19.4-062-bpf-Disallow-bpf-programs-call-prog_run-comman.patch
 	patches.kernel.org/5.19.4-063-bpf-Don-t-reinit-map-value-in-prealloc_lru_pop.patch
+	patches.kernel.org/5.19.4-064-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
