spi: dt-bindings: qcom,spi-geni-qcom: allow three interconnects (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1350,6 +1350,7 @@
 	patches.kernel.org/5.19.4-132-spi-dt-bindings-cadence-add-missing-required.patch
 	patches.kernel.org/5.19.4-133-spi-dt-bindings-zynqmp-qspi-add-missing-requir.patch
 	patches.kernel.org/5.19.4-134-dt-bindings-opp-opp-v2-kryo-cpu-Fix-example-bi.patch
+	patches.kernel.org/5.19.4-135-spi-dt-bindings-qcom-spi-geni-qcom-allow-three.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
