net: phy: c45 baset1: do not skip aneg configuration if clock role is not specified (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1299,6 +1299,7 @@
 	patches.kernel.org/5.19.4-081-devlink-Fix-use-after-free-after-a-failed-relo.patch
 	patches.kernel.org/5.19.4-082-net-phy-Warn-about-incorrect-mdio_bus_phy_resu.patch
 	patches.kernel.org/5.19.4-083-net-bcmgenet-Indicate-MAC-is-in-charge-of-PHY-.patch
+	patches.kernel.org/5.19.4-084-net-phy-c45-baset1-do-not-skip-aneg-configurat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
