--- a/series.conf
+++ b/series.conf
@@ -1545,6 +1545,7 @@
 	patches.kernel.org/5.19.4-327-ASoC-SOF-Intel-hda-ipc-Do-not-process-IPC-repl.patch
 	patches.kernel.org/5.19.4-328-ASoC-SOF-sof-client-probes-Only-load-the-drive.patch
 	patches.kernel.org/5.19.4-329-ASoC-rsnd-care-default-case-on-rsnd_ssiu_busif.patch
+	patches.kernel.org/5.19.4-330-riscv-dts-sifive-Add-fu740-topology-informatio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
