riscv: mmap with PROT_WRITE but no PROT_READ is invalid (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1548,6 +1548,7 @@
 	patches.kernel.org/5.19.4-330-riscv-dts-sifive-Add-fu740-topology-informatio.patch
 	patches.kernel.org/5.19.4-331-riscv-dts-canaan-Add-k210-topology-information.patch
 	patches.kernel.org/5.19.4-332-ASoC-nau8821-Don-t-unconditionally-free-interr.patch
+	patches.kernel.org/5.19.4-333-riscv-mmap-with-PROT_WRITE-but-no-PROT_READ-is.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
