clk: qcom: clk-alpha-pll: fix clk_trion_pll_configure description (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1497,6 +1497,7 @@
 	patches.kernel.org/5.19.4-279-clk-qcom-ipq8074-dont-disable-gcc_sleep_clk_sr.patch
 	patches.kernel.org/5.19.4-280-uacce-Handle-parent-device-removal-or-parent-d.patch
 	patches.kernel.org/5.19.4-281-zram-do-not-lookup-algorithm-in-backends-table.patch
+	patches.kernel.org/5.19.4-282-clk-qcom-clk-alpha-pll-fix-clk_trion_pll_confi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
