--- a/series.conf
+++ b/series.conf
@@ -1493,6 +1493,7 @@
 	patches.kernel.org/5.19.4-275-usb-renesas-Fix-refcount-leak-bug.patch
 	patches.kernel.org/5.19.4-276-scsi-iscsi-Fix-HW-conn-removal-use-after-free.patch
 	patches.kernel.org/5.19.4-277-usb-dwc2-gadget-remove-D-pull-up-while-no-vbus.patch
+	patches.kernel.org/5.19.4-278-vboxguest-Do-not-use-devm-for-irq.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
