bpf: Check the validity of max_rdwr_access for sock local storage map iterator (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1283,6 +1283,7 @@
 	patches.kernel.org/5.19.4-065-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
 	patches.kernel.org/5.19.4-066-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
 	patches.kernel.org/5.19.4-067-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
+	patches.kernel.org/5.19.4-068-bpf-Check-the-validity-of-max_rdwr_access-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
