--- a/series.conf
+++ b/series.conf
@@ -1286,6 +1286,7 @@
 	patches.kernel.org/5.19.4-068-bpf-Check-the-validity-of-max_rdwr_access-for-.patch
 	patches.kernel.org/5.19.4-069-can-mcp251x-Fix-race-condition-on-receive-inte.patch
 	patches.kernel.org/5.19.4-070-can-j1939-j1939_session_destroy-fix-memory-lea.patch
+	patches.kernel.org/5.19.4-071-net-atlantic-fix-aq_vec-index-out-of-range-err.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
