tsnep: Fix tsnep_tx_unmap() error path usage (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1364,6 +1364,7 @@
 	patches.kernel.org/5.19.4-146-NTB-ntb_tool-uninitialized-heap-data-in-tool_f.patch
 	patches.kernel.org/5.19.4-147-nfp-ethtool-fix-the-display-error-of-ethtool-m.patch
 	patches.kernel.org/5.19.4-148-xen-xenbus-fix-return-type-in-xenbus_file_read.patch
+	patches.kernel.org/5.19.4-149-tsnep-Fix-tsnep_tx_unmap-error-path-usage.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
