--- a/series.conf
+++ b/series.conf
@@ -1304,6 +1304,7 @@
 	patches.kernel.org/5.19.4-086-net-bgmac-Fix-a-BUG-triggered-by-wrong-bytes_c.patch
 	patches.kernel.org/5.19.4-087-net-atm-bring-back-zatm-uAPI.patch
 	patches.kernel.org/5.19.4-088-selftests-forwarding-Fix-failing-tests-with-ol.patch
+	patches.kernel.org/5.19.4-089-dt-bindings-arm-qcom-fix-Alcatel-OneTouch-Idol.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
