nvme-fc: fix the fc_appid_store return value (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1368,6 +1368,7 @@
 	patches.kernel.org/5.19.4-150-atm-idt77252-fix-use-after-free-bugs-caused-by.patch
 	patches.kernel.org/5.19.4-151-fscache-don-t-leak-cookie-access-refs-if-inval.patch
 	patches.kernel.org/5.19.4-152-geneve-fix-TOS-inheriting-for-ipv4.patch
+	patches.kernel.org/5.19.4-153-nvme-fc-fix-the-fc_appid_store-return-value.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
