blk-mq: run queue no matter whether the request is the last request (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1447,6 +1447,7 @@
 	patches.kernel.org/5.19.4-229-i40e-Fix-tunnel-checksum-offload-with-fragment.patch
 	patches.kernel.org/5.19.4-230-regulator-pca9450-Remove-restrictions-for-regu.patch
 	patches.kernel.org/5.19.4-231-i40e-Fix-to-stop-tx_timeout-recovery-if-GLOBR-.patch
+	patches.kernel.org/5.19.4-232-blk-mq-run-queue-no-matter-whether-the-request.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
