igb: Add lock to avoid data race (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1452,6 +1452,7 @@
 	patches.kernel.org/5.19.4-234-fec-Fix-timer-capture-timing-in-fec_ptp_enable.patch
 	patches.kernel.org/5.19.4-235-dt-bindings-display-sun4i-Add-D1-TCONs-to-cond.patch
 	patches.kernel.org/5.19.4-236-stmmac-intel-Add-a-missing-clk_disable_unprepa.patch
+	patches.kernel.org/5.19.4-237-igb-Add-lock-to-avoid-data-race.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
