--- a/series.conf
+++ b/series.conf
@@ -1552,6 +1552,7 @@
 	patches.kernel.org/5.19.4-334-RISC-V-Add-fast-call-path-of-crash_kexec.patch
 	patches.kernel.org/5.19.4-335-ALSA-hda-realtek-Enable-speaker-and-mute-LEDs-.patch
 	patches.kernel.org/5.19.4-336-ASoC-SOF-Intel-hda-add-sanity-check-on-SSP-ind.patch
+	patches.kernel.org/5.19.4-337-ASoC-Intel-sof_es8336-Fix-GPIO-quirks-set-via-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
