ASoC: Intel: sof_nau8825: Move quirk check to the front in late probe (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1554,6 +1554,7 @@
 	patches.kernel.org/5.19.4-336-ASoC-SOF-Intel-hda-add-sanity-check-on-SSP-ind.patch
 	patches.kernel.org/5.19.4-337-ASoC-Intel-sof_es8336-Fix-GPIO-quirks-set-via-.patch
 	patches.kernel.org/5.19.4-338-ASoC-Intel-sof_es8336-ignore-GpioInt-when-look.patch
+	patches.kernel.org/5.19.4-339-ASoC-Intel-sof_nau8825-Move-quirk-check-to-the.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
