--- a/series.conf
+++ b/series.conf
@@ -1275,6 +1275,7 @@
 	patches.kernel.org/5.19.4-057-mptcp-btf-Add-struct-mptcp_sock-definition-whe.patch
 	patches.kernel.org/5.19.4-058-mptcp-move-subflow-cleanup-in-mptcp_destroy_co.patch
 	patches.kernel.org/5.19.4-059-mptcp-do-not-queue-data-on-closed-subflows.patch
+	patches.kernel.org/5.19.4-060-selftests-mptcp-make-sendfile-selftest-work.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
