rds: add missing barrier to release_refill (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1221,6 +1221,7 @@
 	patches.kernel.org/5.19.4-003-RDMA-Handle-the-return-code-from-dma_resv_wait.patch
 	patches.kernel.org/5.19.4-004-KVM-Unconditionally-get-a-ref-to-dev-kvm-modul.patch
 	patches.kernel.org/5.19.4-005-x86-mm-Use-proper-mask-when-setting-PUD-mappin.patch
+	patches.kernel.org/5.19.4-006-rds-add-missing-barrier-to-release_refill.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
