--- a/series.conf
+++ b/series.conf
@@ -1272,6 +1272,7 @@
 	patches.kernel.org/5.19.4-054-NFSv4-Fix-races-in-the-legacy-idmapper-upcall.patch
 	patches.kernel.org/5.19.4-055-NFSv4.1-RECLAIM_COMPLETE-must-handle-EACCES.patch
 	patches.kernel.org/5.19.4-056-NFSv4-pnfs-Fix-a-use-after-free-bug-in-open.patch
+	patches.kernel.org/5.19.4-057-mptcp-btf-Add-struct-mptcp_sock-definition-whe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
