--- a/series.conf
+++ b/series.conf
@@ -1462,6 +1462,7 @@
 	patches.kernel.org/5.19.4-244-drm-amdgpu-Avoid-another-list-of-reset-devices.patch
 	patches.kernel.org/5.19.4-245-drm-bridge-lvds-codec-Fix-error-checking-of-dr.patch
 	patches.kernel.org/5.19.4-246-drm-sun4i-dsi-Prevent-underflow-when-computing.patch
+	patches.kernel.org/5.19.4-247-drm-amdgpu-Fix-use-after-free-on-amdgpu_bo_lis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
