net: bgmac: Fix a BUG triggered by wrong bytes_compl (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1301,6 +1301,7 @@
 	patches.kernel.org/5.19.4-083-net-bcmgenet-Indicate-MAC-is-in-charge-of-PHY-.patch
 	patches.kernel.org/5.19.4-084-net-phy-c45-baset1-do-not-skip-aneg-configurat.patch
 	patches.kernel.org/5.19.4-085-net-dsa-felix-suppress-non-changes-to-the-tagg.patch
+	patches.kernel.org/5.19.4-086-net-bgmac-Fix-a-BUG-triggered-by-wrong-bytes_c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
