octeontx2-af: Fix key checking for source mac (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1332,6 +1332,7 @@
 	patches.kernel.org/5.19.4-114-octeontx2-af-Apply-tx-nibble-fixup-always.patch
 	patches.kernel.org/5.19.4-115-octeontx2-af-suppress-external-profile-loading.patch
 	patches.kernel.org/5.19.4-116-octeontx2-af-Fix-mcam-entry-resource-leak.patch
+	patches.kernel.org/5.19.4-117-octeontx2-af-Fix-key-checking-for-source-mac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
