tools/testing/cxl: Fix cxl_hdm_decode_init() calling convention (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1358,6 +1358,7 @@
 	patches.kernel.org/5.19.4-140-clk-imx93-Correct-the-edma1-s-parent-clock.patch
 	patches.kernel.org/5.19.4-141-vdpa_sim-use-max_iotlb_entries-as-a-limit-in-v.patch
 	patches.kernel.org/5.19.4-142-vdpa_sim_blk-set-number-of-address-spaces-and-.patch
+	patches.kernel.org/5.19.4-143-tools-testing-cxl-Fix-cxl_hdm_decode_init-call.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
