--- a/series.conf
+++ b/series.conf
@@ -1410,6 +1410,7 @@
 	patches.kernel.org/5.19.4-192-netfilter-nf_ct_h323-cap-packet-size-at-64k.patch
 	patches.kernel.org/5.19.4-193-netfilter-nf_ct_ftp-prefer-skb_linearize.patch
 	patches.kernel.org/5.19.4-194-netfilter-nf_ct_irc-cap-packet-search-space-to.patch
+	patches.kernel.org/5.19.4-195-netfilter-nf_tables-possible-module-reference-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
