--- a/series.conf
+++ b/series.conf
@@ -1355,6 +1355,7 @@
 	patches.kernel.org/5.19.4-137-tools-testing-cxl-Fix-decoder-default-state.patch
 	patches.kernel.org/5.19.4-138-tools-vm-slabinfo-use-alphabetic-order-when-tw.patch
 	patches.kernel.org/5.19.4-139-ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
+	patches.kernel.org/5.19.4-140-clk-imx93-Correct-the-edma1-s-parent-clock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
