zram: do not lookup algorithm in backends table (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1496,6 +1496,7 @@
 	patches.kernel.org/5.19.4-278-vboxguest-Do-not-use-devm-for-irq.patch
 	patches.kernel.org/5.19.4-279-clk-qcom-ipq8074-dont-disable-gcc_sleep_clk_sr.patch
 	patches.kernel.org/5.19.4-280-uacce-Handle-parent-device-removal-or-parent-d.patch
+	patches.kernel.org/5.19.4-281-zram-do-not-lookup-algorithm-in-backends-table.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
