--- a/series.conf
+++ b/series.conf
@@ -1365,6 +1365,7 @@
 	patches.kernel.org/5.19.4-147-nfp-ethtool-fix-the-display-error-of-ethtool-m.patch
 	patches.kernel.org/5.19.4-148-xen-xenbus-fix-return-type-in-xenbus_file_read.patch
 	patches.kernel.org/5.19.4-149-tsnep-Fix-tsnep_tx_unmap-error-path-usage.patch
+	patches.kernel.org/5.19.4-150-atm-idt77252-fix-use-after-free-bugs-caused-by.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
