--- a/series.conf
+++ b/series.conf
@@ -1217,6 +1217,7 @@
 	patches.kernel.org/5.19.3-007-arm64-kexec_file-use-more-system-keyrings-to-v.patch
 	patches.kernel.org/5.19.3-008-Linux-5.19.3.patch
 	patches.kernel.org/5.19.4-001-ALSA-info-Fix-llseek-return-value-when-using-c.patch
+	patches.kernel.org/5.19.4-002-ALSA-hda-realtek-Add-quirk-for-Clevo-NS50PU-NS.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
