--- a/series.conf
+++ b/series.conf
@@ -1560,6 +1560,7 @@
 	patches.kernel.org/5.19.4-342-powerpc-pseries-mobility-set-NMI-watchdog-fact.patch
 	patches.kernel.org/5.19.4-343-powerpc-32-Set-an-IBAT-covering-up-to-_einitte.patch
 	patches.kernel.org/5.19.4-344-powerpc-32-Don-t-always-pass-mcpu-powerpc-to-t.patch
+	patches.kernel.org/5.19.4-345-ASoC-codecs-va-macro-use-fsgen-as-clock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
