fs/ntfs3: Do not change mode if ntfs_set_ea failed (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1378,6 +1378,7 @@
 	patches.kernel.org/5.19.4-160-fs-ntfs3-Fix-NULL-deref-in-ntfs_update_mftmirr.patch
 	patches.kernel.org/5.19.4-161-fs-ntfs3-Don-t-clear-upper-bits-accidentally-i.patch
 	patches.kernel.org/5.19.4-162-fs-ntfs3-Fix-double-free-on-remount.patch
+	patches.kernel.org/5.19.4-163-fs-ntfs3-Do-not-change-mode-if-ntfs_set_ea-fai.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
