--- a/series.conf
+++ b/series.conf
@@ -1455,6 +1455,7 @@
 	patches.kernel.org/5.19.4-237-igb-Add-lock-to-avoid-data-race.patch
 	patches.kernel.org/5.19.4-238-kbuild-fix-the-modules-order-between-drivers-a.patch
 	patches.kernel.org/5.19.4-239-gcc-plugins-Undefine-LATENT_ENTROPY_PLUGIN-whe.patch
+	patches.kernel.org/5.19.4-240-can-j1939-j1939_sk_queue_activate_next_locked-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
