net: dsa: don't warn in dsa_port_set_state_now() when driver doesn't support it (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1433,6 +1433,7 @@
 	patches.kernel.org/5.19.4-215-net-mscc-ocelot-fix-incorrect-ndo_get_stats64-.patch
 	patches.kernel.org/5.19.4-216-net-mscc-ocelot-fix-address-of-SYS_COUNT_TX_AG.patch
 	patches.kernel.org/5.19.4-217-net-genl-fix-error-path-memory-leak-in-policy-.patch
+	patches.kernel.org/5.19.4-218-net-dsa-don-t-warn-in-dsa_port_set_state_now-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
