--- a/series.conf
+++ b/series.conf
@@ -1271,6 +1271,7 @@
 	patches.kernel.org/5.19.4-053-NFSv4.1-Handle-NFS4ERR_DELAY-replies-to-OP_SEQ.patch
 	patches.kernel.org/5.19.4-054-NFSv4-Fix-races-in-the-legacy-idmapper-upcall.patch
 	patches.kernel.org/5.19.4-055-NFSv4.1-RECLAIM_COMPLETE-must-handle-EACCES.patch
+	patches.kernel.org/5.19.4-056-NFSv4-pnfs-Fix-a-use-after-free-bug-in-open.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
