md: Notify sysfs sync_completed in md_reap_sync_thread() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1525,6 +1525,7 @@
 	patches.kernel.org/5.19.4-307-Revert-RDMA-rxe-Create-duplicate-mapping-table.patch
 	patches.kernel.org/5.19.4-308-openrisc-io-Define-iounmap-argument-as-volatil.patch
 	patches.kernel.org/5.19.4-309-phy-samsung-phy-exynos-pcie-sanitize-init-powe.patch
+	patches.kernel.org/5.19.4-310-md-Notify-sysfs-sync_completed-in-md_reap_sync.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
