--- a/series.conf
+++ b/series.conf
@@ -1241,6 +1241,7 @@
 	patches.kernel.org/5.19.4-023-drm-i915-gt-Ignore-TLB-invalidations-on-idle-e.patch
 	patches.kernel.org/5.19.4-024-drm-i915-gt-Invalidate-TLB-of-the-OA-unit-at-T.patch
 	patches.kernel.org/5.19.4-025-drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
+	patches.kernel.org/5.19.4-026-drm-i915-gt-Batch-TLB-invalidations.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
