mptcp: do not queue data on closed subflows (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1274,6 +1274,7 @@
 	patches.kernel.org/5.19.4-056-NFSv4-pnfs-Fix-a-use-after-free-bug-in-open.patch
 	patches.kernel.org/5.19.4-057-mptcp-btf-Add-struct-mptcp_sock-definition-whe.patch
 	patches.kernel.org/5.19.4-058-mptcp-move-subflow-cleanup-in-mptcp_destroy_co.patch
+	patches.kernel.org/5.19.4-059-mptcp-do-not-queue-data-on-closed-subflows.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
