dmaengine: dw-axi-dmac: ignore interrupt if no descriptor (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1514,6 +1514,7 @@
 	patches.kernel.org/5.19.4-296-um-add-noreboot-command-line-option-for-PANIC_.patch
 	patches.kernel.org/5.19.4-297-of-overlay-Move-devicetree_corrupt-check-up.patch
 	patches.kernel.org/5.19.4-298-dmaengine-dw-axi-dmac-do-not-print-NULL-LLI-du.patch
+	patches.kernel.org/5.19.4-299-dmaengine-dw-axi-dmac-ignore-interrupt-if-no-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
