--- a/series.conf
+++ b/series.conf
@@ -1477,6 +1477,7 @@
 	patches.kernel.org/5.19.4-259-platform-chrome-cros_ec_proto-don-t-show-MKBP-.patch
 	patches.kernel.org/5.19.4-260-staging-r8188eu-add-error-handling-of-rtw_read.patch
 	patches.kernel.org/5.19.4-261-staging-r8188eu-add-error-handling-of-rtw_read.patch
+	patches.kernel.org/5.19.4-262-staging-r8188eu-add-error-handling-of-rtw_read.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
