--- a/series.conf
+++ b/series.conf
@@ -1357,6 +1357,7 @@
 	patches.kernel.org/5.19.4-139-ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
 	patches.kernel.org/5.19.4-140-clk-imx93-Correct-the-edma1-s-parent-clock.patch
 	patches.kernel.org/5.19.4-141-vdpa_sim-use-max_iotlb_entries-as-a-limit-in-v.patch
+	patches.kernel.org/5.19.4-142-vdpa_sim_blk-set-number-of-address-spaces-and-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
