powerpc/ioda/iommu/debugfs: Generate unique debugfs entries (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1562,6 +1562,7 @@
 	patches.kernel.org/5.19.4-344-powerpc-32-Don-t-always-pass-mcpu-powerpc-to-t.patch
 	patches.kernel.org/5.19.4-345-ASoC-codecs-va-macro-use-fsgen-as-clock.patch
 	patches.kernel.org/5.19.4-346-ovl-warn-if-trusted-xattr-creation-fails.patch
+	patches.kernel.org/5.19.4-347-powerpc-ioda-iommu-debugfs-Generate-unique-deb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
