perf parse-events: Fix segfault when event parser gets an error (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1371,6 +1371,7 @@
 	patches.kernel.org/5.19.4-153-nvme-fc-fix-the-fc_appid_store-return-value.patch
 	patches.kernel.org/5.19.4-154-perf-probe-Fix-an-error-handling-path-in-parse.patch
 	patches.kernel.org/5.19.4-155-i2c-qcom-geni-Fix-GPI-DMA-buffer-sync-back.patch
+	patches.kernel.org/5.19.4-156-perf-parse-events-Fix-segfault-when-event-pars.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
