--- a/series.conf
+++ b/series.conf
@@ -1488,6 +1488,7 @@
 	patches.kernel.org/5.19.4-270-drm-meson-Fix-overflow-implicit-truncation-war.patch
 	patches.kernel.org/5.19.4-271-clk-ti-Stop-using-legacy-clkctrl-names-for-oma.patch
 	patches.kernel.org/5.19.4-272-scsi-ufs-ufs-mediatek-Fix-the-timing-of-config.patch
+	patches.kernel.org/5.19.4-273-usb-typec-mux-Add-CONFIG-guards-for-functions.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
