--- a/series.conf
+++ b/series.conf
@@ -1297,6 +1297,7 @@
 	patches.kernel.org/5.19.4-079-virtio_net-fix-memory-leak-inside-XPD_TX-with-.patch
 	patches.kernel.org/5.19.4-080-virtio-blk-Avoid-use-after-free-on-suspend-res.patch
 	patches.kernel.org/5.19.4-081-devlink-Fix-use-after-free-after-a-failed-relo.patch
+	patches.kernel.org/5.19.4-082-net-phy-Warn-about-incorrect-mdio_bus_phy_resu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
