m68k: coldfire/device.c: protect FLEXCAN blocks (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1287,6 +1287,7 @@
 	patches.kernel.org/5.19.4-069-can-mcp251x-Fix-race-condition-on-receive-inte.patch
 	patches.kernel.org/5.19.4-070-can-j1939-j1939_session_destroy-fix-memory-lea.patch
 	patches.kernel.org/5.19.4-071-net-atlantic-fix-aq_vec-index-out-of-range-err.patch
+	patches.kernel.org/5.19.4-072-m68k-coldfire-device.c-protect-FLEXCAN-blocks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
