apparmor: fix reference count leak in aa_pivotroot() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1262,6 +1262,7 @@
 	patches.kernel.org/5.19.4-044-apparmor-fix-aa_label_asxprint-return-check.patch
 	patches.kernel.org/5.19.4-045-apparmor-fix-setting-unconfined-mode-on-a-load.patch
 	patches.kernel.org/5.19.4-046-apparmor-fix-overlapping-attachment-computatio.patch
+	patches.kernel.org/5.19.4-047-apparmor-fix-reference-count-leak-in-aa_pivotr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
