ASoC: tas2770: Set correct FSYNC polarity (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1394,6 +1394,7 @@
 	patches.kernel.org/5.19.4-176-ASoC-SOF-debug-Fix-potential-buffer-overflow-b.patch
 	patches.kernel.org/5.19.4-177-ASoC-SOF-Intel-hda-Fix-potential-buffer-overfl.patch
 	patches.kernel.org/5.19.4-178-ASoC-DPCM-Don-t-pick-up-BE-without-substream.patch
+	patches.kernel.org/5.19.4-179-ASoC-tas2770-Set-correct-FSYNC-polarity.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
