--- a/series.conf
+++ b/series.conf
@@ -1465,6 +1465,7 @@
 	patches.kernel.org/5.19.4-247-drm-amdgpu-Fix-use-after-free-on-amdgpu_bo_lis.patch
 	patches.kernel.org/5.19.4-248-KVM-arm64-Treat-PMCR_EL1.LC-as-RES1-on-asymmet.patch
 	patches.kernel.org/5.19.4-249-KVM-arm64-Reject-32bit-user-PSTATE-on-asymmetr.patch
+	patches.kernel.org/5.19.4-250-net-mscc-ocelot-turn-stats_lock-into-a-spinloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
