--- a/series.conf
+++ b/series.conf
@@ -1325,6 +1325,7 @@
 	patches.kernel.org/5.19.4-107-Input-iqs7222-acknowledge-reset-before-writing.patch
 	patches.kernel.org/5.19.4-108-Input-iqs7222-handle-reset-during-ATI.patch
 	patches.kernel.org/5.19.4-109-Input-iqs7222-remove-support-for-RF-filter.patch
+	patches.kernel.org/5.19.4-110-dt-bindings-input-iqs7222-Remove-support-for-R.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
