--- a/series.conf
+++ b/series.conf
@@ -1426,6 +1426,7 @@
 	patches.kernel.org/5.19.4-208-mlxsw-spectrum-Clear-PTP-configuration-after-u.patch
 	patches.kernel.org/5.19.4-209-net-moxa-pass-pdev-instead-of-ndev-to-DMA-func.patch
 	patches.kernel.org/5.19.4-210-net-fix-potential-refcount-leak-in-ndisc_route.patch
+	patches.kernel.org/5.19.4-211-net-rtnetlink-fix-module-reference-count-leak-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
