--- a/series.conf
+++ b/series.conf
@@ -1349,6 +1349,7 @@
 	patches.kernel.org/5.19.4-131-dt-bindings-PCI-qcom-Fix-reset-conditional.patch
 	patches.kernel.org/5.19.4-132-spi-dt-bindings-cadence-add-missing-required.patch
 	patches.kernel.org/5.19.4-133-spi-dt-bindings-zynqmp-qspi-add-missing-requir.patch
+	patches.kernel.org/5.19.4-134-dt-bindings-opp-opp-v2-kryo-cpu-Fix-example-bi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
