--- a/series.conf
+++ b/series.conf
@@ -1245,6 +1245,7 @@
 	patches.kernel.org/5.19.4-027-drm-i915-pass-a-pointer-for-tlb-seqno-at-vma_i.patch
 	patches.kernel.org/5.19.4-028-cifs-Fix-memory-leak-on-the-deferred-close.patch
 	patches.kernel.org/5.19.4-029-x86-kprobes-Fix-JNG-JNLE-emulation.patch
+	patches.kernel.org/5.19.4-030-tracing-perf-Fix-double-put-of-trace-event-whe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
