x86/ibt, objtool: Add IBT_NOSEAL() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1469,6 +1469,7 @@
 	patches.kernel.org/5.19.4-251-net-mscc-ocelot-fix-race-between-ndo_get_stats.patch
 	patches.kernel.org/5.19.4-252-net-mscc-ocelot-make-struct-ocelot_stat_layout.patch
 	patches.kernel.org/5.19.4-253-net-mscc-ocelot-report-ndo_get_stats64-from-th.patch
+	patches.kernel.org/5.19.4-254-x86-ibt-objtool-Add-IBT_NOSEAL.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
