--- a/series.conf
+++ b/series.conf
@@ -1444,6 +1444,7 @@
 	patches.kernel.org/5.19.4-226-ice-Ignore-error-message-when-setting-same-pro.patch
 	patches.kernel.org/5.19.4-227-modpost-fix-module-versioning-when-a-symbol-la.patch
 	patches.kernel.org/5.19.4-228-i2c-imx-Make-sure-to-unregister-adapter-on-rem.patch
+	patches.kernel.org/5.19.4-229-i40e-Fix-tunnel-checksum-offload-with-fragment.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
