netfilter: nf_ct_sane: remove pseudo skb linearization (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1406,6 +1406,7 @@
 	patches.kernel.org/5.19.4-188-netfilter-nf_tables-use-READ_ONCE-and-WRITE_ON.patch
 	patches.kernel.org/5.19.4-189-fs-ntfs3-uninitialized-variable-in-ntfs_set_ac.patch
 	patches.kernel.org/5.19.4-190-netfilter-nf_tables-disallow-NFTA_SET_ELEM_KEY.patch
+	patches.kernel.org/5.19.4-191-netfilter-nf_ct_sane-remove-pseudo-skb-lineari.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
