--- a/series.conf
+++ b/series.conf
@@ -1300,6 +1300,7 @@
 	patches.kernel.org/5.19.4-082-net-phy-Warn-about-incorrect-mdio_bus_phy_resu.patch
 	patches.kernel.org/5.19.4-083-net-bcmgenet-Indicate-MAC-is-in-charge-of-PHY-.patch
 	patches.kernel.org/5.19.4-084-net-phy-c45-baset1-do-not-skip-aneg-configurat.patch
+	patches.kernel.org/5.19.4-085-net-dsa-felix-suppress-non-changes-to-the-tagg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
