ice: Fix call trace with null VSI during VF reset (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1436,6 +1436,7 @@
 	patches.kernel.org/5.19.4-218-net-dsa-don-t-warn-in-dsa_port_set_state_now-w.patch
 	patches.kernel.org/5.19.4-219-net-dsa-sja1105-fix-buffer-overflow-in-sja1105.patch
 	patches.kernel.org/5.19.4-220-ice-Fix-VSI-rebuild-WARN_ON-check-for-VF.patch
+	patches.kernel.org/5.19.4-221-ice-Fix-call-trace-with-null-VSI-during-VF-res.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
