fs/ntfs3: Don't clear upper bits accidentally in log_replay() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1376,6 +1376,7 @@
 	patches.kernel.org/5.19.4-158-dpaa2-eth-trace-the-allocated-address-instead-.patch
 	patches.kernel.org/5.19.4-159-fs-ntfs3-Fix-using-uninitialized-value-n-when-.patch
 	patches.kernel.org/5.19.4-160-fs-ntfs3-Fix-NULL-deref-in-ntfs_update_mftmirr.patch
+	patches.kernel.org/5.19.4-161-fs-ntfs3-Don-t-clear-upper-bits-accidentally-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
