dt-bindings: pinctrl: mt8195: Fix name for mediatek,rsel-resistance-in-si-unit (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1311,6 +1311,7 @@
 	patches.kernel.org/5.19.4-093-pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinct.patch
 	patches.kernel.org/5.19.4-094-pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-.patch
 	patches.kernel.org/5.19.4-095-pinctrl-amd-Don-t-save-restore-interrupt-statu.patch
+	patches.kernel.org/5.19.4-096-dt-bindings-pinctrl-mt8195-Fix-name-for-mediat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
