i2c: qcom-geni: Fix GPI DMA buffer sync-back (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1370,6 +1370,7 @@
 	patches.kernel.org/5.19.4-152-geneve-fix-TOS-inheriting-for-ipv4.patch
 	patches.kernel.org/5.19.4-153-nvme-fc-fix-the-fc_appid_store-return-value.patch
 	patches.kernel.org/5.19.4-154-perf-probe-Fix-an-error-handling-path-in-parse.patch
+	patches.kernel.org/5.19.4-155-i2c-qcom-geni-Fix-GPI-DMA-buffer-sync-back.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
