--- a/series.conf
+++ b/series.conf
@@ -1522,6 +1522,7 @@
 	patches.kernel.org/5.19.4-304-selftests-kprobe-Do-not-test-for-GRP-without-e.patch
 	patches.kernel.org/5.19.4-305-dmaengine-tegra-Add-terminate-for-Tegra234.patch
 	patches.kernel.org/5.19.4-306-dmaengine-sprd-Cleanup-in-.remove-after-pm_run.patch
+	patches.kernel.org/5.19.4-307-Revert-RDMA-rxe-Create-duplicate-mapping-table.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
