kbuild: fix the modules order between drivers and libs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1453,6 +1453,7 @@
 	patches.kernel.org/5.19.4-235-dt-bindings-display-sun4i-Add-D1-TCONs-to-cond.patch
 	patches.kernel.org/5.19.4-236-stmmac-intel-Add-a-missing-clk_disable_unprepa.patch
 	patches.kernel.org/5.19.4-237-igb-Add-lock-to-avoid-data-race.patch
+	patches.kernel.org/5.19.4-238-kbuild-fix-the-modules-order-between-drivers-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
