--- a/series.conf
+++ b/series.conf
@@ -1456,6 +1456,7 @@
 	patches.kernel.org/5.19.4-238-kbuild-fix-the-modules-order-between-drivers-a.patch
 	patches.kernel.org/5.19.4-239-gcc-plugins-Undefine-LATENT_ENTROPY_PLUGIN-whe.patch
 	patches.kernel.org/5.19.4-240-can-j1939-j1939_sk_queue_activate_next_locked-.patch
+	patches.kernel.org/5.19.4-241-drm-imx-dcss-get-rid-of-HPD-warning-message.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
