--- a/series.conf
+++ b/series.conf
@@ -1351,6 +1351,7 @@
 	patches.kernel.org/5.19.4-133-spi-dt-bindings-zynqmp-qspi-add-missing-requir.patch
 	patches.kernel.org/5.19.4-134-dt-bindings-opp-opp-v2-kryo-cpu-Fix-example-bi.patch
 	patches.kernel.org/5.19.4-135-spi-dt-bindings-qcom-spi-geni-qcom-allow-three.patch
+	patches.kernel.org/5.19.4-136-ceph-use-correct-index-when-encoding-client-su.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
