--- a/series.conf
+++ b/series.conf
@@ -1555,6 +1555,7 @@
 	patches.kernel.org/5.19.4-337-ASoC-Intel-sof_es8336-Fix-GPIO-quirks-set-via-.patch
 	patches.kernel.org/5.19.4-338-ASoC-Intel-sof_es8336-ignore-GpioInt-when-look.patch
 	patches.kernel.org/5.19.4-339-ASoC-Intel-sof_nau8825-Move-quirk-check-to-the.patch
+	patches.kernel.org/5.19.4-340-watchdog-export-lockup_detector_reconfigure.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
