net: tap: NULL pointer derefence in dev_parse_header_protocol when skb->dev is null (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1266,6 +1266,7 @@
 	patches.kernel.org/5.19.4-048-apparmor-Fix-memleak-in-aa_simple_write_to_buf.patch
 	patches.kernel.org/5.19.4-049-Documentation-ACPI-EINJ-Fix-obsolete-example.patch
 	patches.kernel.org/5.19.4-050-netfilter-nf_tables-fix-crash-when-nf_trace-is.patch
+	patches.kernel.org/5.19.4-051-net-tap-NULL-pointer-derefence-in-dev_parse_he.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
