mptcp: move subflow cleanup in mptcp_destroy_common() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1273,6 +1273,7 @@
 	patches.kernel.org/5.19.4-055-NFSv4.1-RECLAIM_COMPLETE-must-handle-EACCES.patch
 	patches.kernel.org/5.19.4-056-NFSv4-pnfs-Fix-a-use-after-free-bug-in-open.patch
 	patches.kernel.org/5.19.4-057-mptcp-btf-Add-struct-mptcp_sock-definition-whe.patch
+	patches.kernel.org/5.19.4-058-mptcp-move-subflow-cleanup-in-mptcp_destroy_co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
