--- a/series.conf
+++ b/series.conf
@@ -1335,6 +1335,7 @@
 	patches.kernel.org/5.19.4-117-octeontx2-af-Fix-key-checking-for-source-mac.patch
 	patches.kernel.org/5.19.4-118-ACPI-property-Return-type-of-acpi_add_nondev_s.patch
 	patches.kernel.org/5.19.4-119-geneve-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
+	patches.kernel.org/5.19.4-120-vxlan-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
