--- a/series.conf
+++ b/series.conf
@@ -1505,6 +1505,7 @@
 	patches.kernel.org/5.19.4-287-habanalabs-add-terminating-NULL-to-attrs-array.patch
 	patches.kernel.org/5.19.4-288-habanalabs-gaudi-invoke-device-reset-from-one-.patch
 	patches.kernel.org/5.19.4-289-habanalabs-gaudi-fix-shift-out-of-bounds.patch
+	patches.kernel.org/5.19.4-290-habanalabs-gaudi-mask-constant-value-before-ca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
