Input: iqs7222 - protect volatile registers (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1321,6 +1321,7 @@
 	patches.kernel.org/5.19.4-103-Input-mt6779-keypad-match-hardware-matrix-orga.patch
 	patches.kernel.org/5.19.4-104-Input-iqs7222-correct-slider-event-disable-log.patch
 	patches.kernel.org/5.19.4-105-Input-iqs7222-fortify-slider-event-reporting.patch
+	patches.kernel.org/5.19.4-106-Input-iqs7222-protect-volatile-registers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
