--- a/series.conf
+++ b/series.conf
@@ -1481,6 +1481,7 @@
 	patches.kernel.org/5.19.4-263-usb-cdns3-fix-use-after-free-at-workaround-2.patch
 	patches.kernel.org/5.19.4-264-usb-gadget-uvc-calculate-the-number-of-request.patch
 	patches.kernel.org/5.19.4-265-usb-gadget-uvc-call-uvc-uvcg_warn-on-completed.patch
+	patches.kernel.org/5.19.4-266-PCI-aardvark-Fix-reporting-Slot-capabilities-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
