ceph: don't leak snap_rwsem in handle_cap_grant (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1354,6 +1354,7 @@
 	patches.kernel.org/5.19.4-136-ceph-use-correct-index-when-encoding-client-su.patch
 	patches.kernel.org/5.19.4-137-tools-testing-cxl-Fix-decoder-default-state.patch
 	patches.kernel.org/5.19.4-138-tools-vm-slabinfo-use-alphabetic-order-when-tw.patch
+	patches.kernel.org/5.19.4-139-ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
