dt-bindings: clock: qcom,gcc-msm8996: add more GCC clock sources (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1345,6 +1345,7 @@
 	patches.kernel.org/5.19.4-127-dt-bindings-arm-qcom-fix-Longcheer-L8150-compa.patch
 	patches.kernel.org/5.19.4-128-dt-bindings-arm-qcom-fix-MSM8916-MTP-compatibl.patch
 	patches.kernel.org/5.19.4-129-dt-bindings-arm-qcom-fix-MSM8994-boards-compat.patch
+	patches.kernel.org/5.19.4-130-dt-bindings-clock-qcom-gcc-msm8996-add-more-GC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
