--- a/series.conf
+++ b/series.conf
@@ -1563,6 +1563,7 @@
 	patches.kernel.org/5.19.4-345-ASoC-codecs-va-macro-use-fsgen-as-clock.patch
 	patches.kernel.org/5.19.4-346-ovl-warn-if-trusted-xattr-creation-fails.patch
 	patches.kernel.org/5.19.4-347-powerpc-ioda-iommu-debugfs-Generate-unique-deb.patch
+	patches.kernel.org/5.19.4-348-ALSA-core-Add-async-signal-helpers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
