net: bcmgenet: Indicate MAC is in charge of PHY PM (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1298,6 +1298,7 @@
 	patches.kernel.org/5.19.4-080-virtio-blk-Avoid-use-after-free-on-suspend-res.patch
 	patches.kernel.org/5.19.4-081-devlink-Fix-use-after-free-after-a-failed-relo.patch
 	patches.kernel.org/5.19.4-082-net-phy-Warn-about-incorrect-mdio_bus_phy_resu.patch
+	patches.kernel.org/5.19.4-083-net-bcmgenet-Indicate-MAC-is-in-charge-of-PHY-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
