--- a/series.conf
+++ b/series.conf
@@ -1519,6 +1519,7 @@
 	patches.kernel.org/5.19.4-301-ACPI-PPTT-Leave-the-table-mapped-for-the-runti.patch
 	patches.kernel.org/5.19.4-302-RDMA-rxe-Limit-the-number-of-calls-to-each-tas.patch
 	patches.kernel.org/5.19.4-303-csky-kprobe-reclaim-insn_slot-on-kprobe-unregi.patch
+	patches.kernel.org/5.19.4-304-selftests-kprobe-Do-not-test-for-GRP-without-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
