--- a/series.conf
+++ b/series.conf
@@ -1247,6 +1247,7 @@
 	patches.kernel.org/5.19.4-029-x86-kprobes-Fix-JNG-JNLE-emulation.patch
 	patches.kernel.org/5.19.4-030-tracing-perf-Fix-double-put-of-trace-event-whe.patch
 	patches.kernel.org/5.19.4-031-tracing-eprobes-Do-not-allow-eprobes-to-use-st.patch
+	patches.kernel.org/5.19.4-032-tracing-eprobes-Do-not-hardcode-comm-as-a-stri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
