--- a/series.conf
+++ b/series.conf
@@ -1405,6 +1405,7 @@
 	patches.kernel.org/5.19.4-187-netfilter-nfnetlink-re-enable-conntrack-expect.patch
 	patches.kernel.org/5.19.4-188-netfilter-nf_tables-use-READ_ONCE-and-WRITE_ON.patch
 	patches.kernel.org/5.19.4-189-fs-ntfs3-uninitialized-variable-in-ntfs_set_ac.patch
+	patches.kernel.org/5.19.4-190-netfilter-nf_tables-disallow-NFTA_SET_ELEM_KEY.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
