--- a/series.conf
+++ b/series.conf
@@ -1569,6 +1569,7 @@
 	patches.kernel.org/5.19.4-351-ALSA-control-Use-deferred-fasync-helper.patch
 	patches.kernel.org/5.19.4-352-f2fs-fix-to-avoid-use-f2fs_bug_on-in-f2fs_new_.patch
 	patches.kernel.org/5.19.4-353-f2fs-fix-to-do-sanity-check-on-segment-type-in.patch
+	patches.kernel.org/5.19.4-354-smb3-check-xattr-value-length-earlier.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
