--- a/series.conf
+++ b/series.conf
@@ -1242,6 +1242,7 @@
 	patches.kernel.org/5.19.4-024-drm-i915-gt-Invalidate-TLB-of-the-OA-unit-at-T.patch
 	patches.kernel.org/5.19.4-025-drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
 	patches.kernel.org/5.19.4-026-drm-i915-gt-Batch-TLB-invalidations.patch
+	patches.kernel.org/5.19.4-027-drm-i915-pass-a-pointer-for-tlb-seqno-at-vma_i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
