dt-bindings: gpio: zynq: Add missing compatible strings (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1341,6 +1341,7 @@
 	patches.kernel.org/5.19.4-123-plip-avoid-rcu-debug-splat.patch
 	patches.kernel.org/5.19.4-124-vsock-Fix-memory-leak-in-vsock_connect.patch
 	patches.kernel.org/5.19.4-125-vsock-Set-socket-state-back-to-SS_UNCONNECTED-.patch
+	patches.kernel.org/5.19.4-126-dt-bindings-gpio-zynq-Add-missing-compatible-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
