platform/chrome: cros_ec_proto: don't show MKBP version if unsupported (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1474,6 +1474,7 @@
 	patches.kernel.org/5.19.4-256-thunderbolt-Change-downstream-router-s-TMU-rat.patch
 	patches.kernel.org/5.19.4-257-HID-multitouch-new-device-class-fix-Lenovo-X12.patch
 	patches.kernel.org/5.19.4-258-PCI-Add-ACS-quirk-for-Broadcom-BCM5750x-NICs.patch
+	patches.kernel.org/5.19.4-259-platform-chrome-cros_ec_proto-don-t-show-MKBP-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
