dt-bindings: pinctrl: mt8195: Add and use drive-strength-microamp (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1312,6 +1312,7 @@
 	patches.kernel.org/5.19.4-094-pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-.patch
 	patches.kernel.org/5.19.4-095-pinctrl-amd-Don-t-save-restore-interrupt-statu.patch
 	patches.kernel.org/5.19.4-096-dt-bindings-pinctrl-mt8195-Fix-name-for-mediat.patch
+	patches.kernel.org/5.19.4-097-dt-bindings-pinctrl-mt8195-Add-and-use-drive-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
