--- a/series.conf
+++ b/series.conf
@@ -1448,6 +1448,7 @@
 	patches.kernel.org/5.19.4-230-regulator-pca9450-Remove-restrictions-for-regu.patch
 	patches.kernel.org/5.19.4-231-i40e-Fix-to-stop-tx_timeout-recovery-if-GLOBR-.patch
 	patches.kernel.org/5.19.4-232-blk-mq-run-queue-no-matter-whether-the-request.patch
+	patches.kernel.org/5.19.4-233-tools-rtla-Fix-command-symlinks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
