ALSA: usb-audio: More comprehensive mixer map for ASUS ROG Zenith II (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1252,6 +1252,7 @@
 	patches.kernel.org/5.19.4-034-tracing-eprobes-Have-event-probes-be-consisten.patch
 	patches.kernel.org/5.19.4-035-tracing-probes-Have-kprobes-and-uprobes-use-CO.patch
 	patches.kernel.org/5.19.4-036-tracing-Have-filter-accept-common_cpu-to-be-co.patch
+	patches.kernel.org/5.19.4-037-ALSA-usb-audio-More-comprehensive-mixer-map-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
