--- a/series.conf
+++ b/series.conf
@@ -1397,6 +1397,7 @@
 	patches.kernel.org/5.19.4-179-ASoC-tas2770-Set-correct-FSYNC-polarity.patch
 	patches.kernel.org/5.19.4-180-ASoC-tas2770-Allow-mono-streams.patch
 	patches.kernel.org/5.19.4-181-ASoC-tas2770-Drop-conflicting-set_bias_level-p.patch
+	patches.kernel.org/5.19.4-182-ASoC-tas2770-Fix-handling-of-mute-unmute.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
