--- a/series.conf
+++ b/series.conf
@@ -1566,6 +1566,7 @@
 	patches.kernel.org/5.19.4-348-ALSA-core-Add-async-signal-helpers.patch
 	patches.kernel.org/5.19.4-349-ALSA-timer-Use-deferred-fasync-helper.patch
 	patches.kernel.org/5.19.4-350-ALSA-pcm-Use-deferred-fasync-helper.patch
+	patches.kernel.org/5.19.4-351-ALSA-control-Use-deferred-fasync-helper.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
