ice: Fix VF not able to send tagged traffic with no VLAN filters (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1437,6 +1437,7 @@
 	patches.kernel.org/5.19.4-219-net-dsa-sja1105-fix-buffer-overflow-in-sja1105.patch
 	patches.kernel.org/5.19.4-220-ice-Fix-VSI-rebuild-WARN_ON-check-for-VF.patch
 	patches.kernel.org/5.19.4-221-ice-Fix-call-trace-with-null-VSI-during-VF-res.patch
+	patches.kernel.org/5.19.4-222-ice-Fix-VF-not-able-to-send-tagged-traffic-wit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
