mlxsw: spectrum: Clear PTP configuration after unregistering the netdevice (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1423,6 +1423,7 @@
 	patches.kernel.org/5.19.4-205-net-dsa-mv88e6060-prevent-crash-on-an-unused-p.patch
 	patches.kernel.org/5.19.4-206-net-qrtr-start-MHI-channel-after-endpoit-creat.patch
 	patches.kernel.org/5.19.4-207-virtio_net-fix-endian-ness-for-RSS.patch
+	patches.kernel.org/5.19.4-208-mlxsw-spectrum-Clear-PTP-configuration-after-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
