--- a/series.conf
+++ b/series.conf
@@ -1293,6 +1293,7 @@
 	patches.kernel.org/5.19.4-075-SUNRPC-Reinitialise-the-backchannel-request-bu.patch
 	patches.kernel.org/5.19.4-076-SUNRPC-Don-t-reuse-bvec-on-retransmission-of-t.patch
 	patches.kernel.org/5.19.4-077-ASoC-qdsp6-q6apm-dai-unprepare-stream-if-its-a.patch
+	patches.kernel.org/5.19.4-078-virtio-VIRTIO_HARDEN_NOTIFICATION-is-broken.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
