--- a/series.conf
+++ b/series.conf
@@ -1333,6 +1333,7 @@
 	patches.kernel.org/5.19.4-115-octeontx2-af-suppress-external-profile-loading.patch
 	patches.kernel.org/5.19.4-116-octeontx2-af-Fix-mcam-entry-resource-leak.patch
 	patches.kernel.org/5.19.4-117-octeontx2-af-Fix-key-checking-for-source-mac.patch
+	patches.kernel.org/5.19.4-118-ACPI-property-Return-type-of-acpi_add_nondev_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
