btrfs: fix warning during log replay when bumping inode link count (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1236,6 +1236,7 @@
 	patches.kernel.org/5.19.4-018-btrfs-unset-reloc-control-if-transaction-commi.patch
 	patches.kernel.org/5.19.4-019-btrfs-reset-RO-counter-on-block-group-if-we-fa.patch
 	patches.kernel.org/5.19.4-020-btrfs-fix-lost-error-handling-when-looking-up-.patch
+	patches.kernel.org/5.19.4-021-btrfs-fix-warning-during-log-replay-when-bumpi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
