net: mscc: ocelot: fix race between ndo_get_stats64 and ocelot_check_stats_work (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1466,6 +1466,7 @@
 	patches.kernel.org/5.19.4-248-KVM-arm64-Treat-PMCR_EL1.LC-as-RES1-on-asymmet.patch
 	patches.kernel.org/5.19.4-249-KVM-arm64-Reject-32bit-user-PSTATE-on-asymmetr.patch
 	patches.kernel.org/5.19.4-250-net-mscc-ocelot-turn-stats_lock-into-a-spinloc.patch
+	patches.kernel.org/5.19.4-251-net-mscc-ocelot-fix-race-between-ndo_get_stats.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
